# khulnasoft-lab-_-workshop

./: LICENSE  README.md  pyproject.toml
app/api/: demo_1.py  demo_2.py  demo_3.py  home.py
app/core/: app.py  templates.py
